<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nexgo.apiv3demo.PinpadActivity">

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:padding="20dp"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_key_inject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="@string/update_tmk"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/work_key_inject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="@string/update_workkey"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/work_key_enc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="@string/encrypt_workkey"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/input_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="@string/input_online_pin"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pinpad_calMac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="calculate MAC"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/pinpad_tken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="encrypt data"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pinpad_custom_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="Custom layout"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/pinpad_dukpt_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="@string/dukpt"
            android:textSize="@dimen/normal_text_size" />

        <!--<Button-->
            <!--android:id="@+id/pinpad_load_by_com"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/normal_margin"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/btnselector"-->
            <!--android:onClick="onClick"-->
            <!--android:text="Get key from master pos"-->
            <!--android:textSize="@dimen/normal_text_size" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ext_pinpad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:onClick="onClick"
            android:text="ExtPinpad"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>



</LinearLayout>
